--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,13 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pm26sproject2"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".GroupActivity"
+            android:exported="false"
+            android:label="@string/title_activity_group"
+            android:theme="@style/Theme.Pm26sproject2.NoActionBar" />
+        <activity
+            android:name=".GroupsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterGroupActivity"
+            android:exported="false" />
         <activity
             android:name=".MonitorActivity"
             android:exported="false" />
         <activity
             android:name=".IntroActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
